--- a/src/pages/LocationPage.css
+++ b/src/pages/LocationPage.css
@@ -1,6 +1,6 @@
 .location-page {
   min-height: 100vh;
-  padding-top: 80px;
+  padding-top: 0;
 }
 
 .location-hero {
